--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Adrian Portales <adrianportales135@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "~3.8"
+python = ">=3.7.1,<3.11"
 numpy = "^1.21.4"
 pandas = "^1.3.4"
 typer = "^0.4.0"
